Update Second Content row mobile view

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
         .hero-content {
             padding: 0 15px 0 15px !important;
         }
+        .column.left {
+            display: table-header-group !important;    
+        }
+        .column.right {
+            display: table-footer-group !important;
+        }
+        .column.left table {
+            margin-bottom: 15px;
+        }
+        .image img {
+            max-width: 100% !important;
+        }
         .empty-spacer.vertical {
             display: none !important;
         }
@@ -243,7 +255,7 @@
                                                         <tr>
                                                             <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
                                                                 <img src="img/Hands-Free.png" alt="Picture of a man wearing Buds Pro while taking photos" style="border: none;
-                                                                outline: none; display: block; width: 100%; min-width: 276px; height: auto; font-size: 0;" width="276">
+                                                                outline: none; display: block; width: 100%; max-width: 276px; height: auto; font-size: 0;" width="276">
                                                             </td>
                                                         </tr>
                                                         <!-- Content -->
@@ -288,7 +300,7 @@
                                                          <tr>
                                                              <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
                                                                  <img src="img/Made-For-You.png" alt="Picture of a woman wearing Buds Pro while working out" style="border: none;
-                                                                 outline: none; display: block; width: 100%; min-width: 276px; height: auto; font-size: 0;" width="276">
+                                                                 outline: none; display: block; width: 100%; max-width: 276px; height: auto; font-size: 0;" width="276">
                                                              </td>
                                                          </tr>
                                                          <!-- Content -->
