--- a/index.html
+++ b/index.html
@@ -73,6 +73,26 @@
         .hero-content {
             padding: 0 15px 0 15px !important;
         }
+        .table-container__left{
+            height: auto !important;
+            width: 100% !important;
+        }
+        .table-container__right{
+            height: auto !important;
+            width: 100% !important;
+        }
+        .right-column {
+            width: 100% !important;
+        }
+        .right-column img {
+            max-width: 100% !important;
+        }
+        .table-content.top {
+            display: table-header-group !important;
+        }
+        .table-content.bottom {
+            display: table-footer-group !important;
+        }
         .column.left {
             display: table-header-group !important;    
         }
@@ -183,9 +203,23 @@
                                         <table class="table-container" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
                                            <tr>
                                                 <td class="two-columns">
+                                                    <table class="table-container__right top" role="presentation" width="50%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" align="right">
+                                                        <tr>
+                                                            <td class="table-content top">
+                                                                <table class="content" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                                                    <tr>
+                                                                        <td class="right-column" align="right" style="padding: 0;" width="50%" valign="top">
+                                                                            <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+
                                                     <table class="table-container__left bottom" role="presentation" width="50%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" align="left">
                                                         <tr>
-                                                            <td class="padding" valign="top">
+                                                            <td class="table-content bottom" valign="top">
                                                                 <table class="content" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
                                                                     <tr>
                                                                         <td class="left-column" align="left" style="padding: 30px 20px 30px 20px; text-align: center; vertical-align: middle;" width="50%" valign="top">
@@ -200,20 +234,6 @@
                                                                                     Learn more >
                                                                                 </span>
                                                                             </a>
-                                                                        </td>
-                                                                    </tr>
-                                                                </table>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-
-                                                    <table class="table-container__right top" role="presentation" width="50%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" align="left">
-                                                        <tr>
-                                                            <td class="padding">
-                                                                <table class="content" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
-                                                                    <tr>
-                                                                        <td class="right-column" align="right" style="padding: 0;" width="50%" valign="top">
-                                                                            <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
                                                                         </td>
                                                                     </tr>
                                                                 </table>
