--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
             max-width: 100% !important;
         }
         .content__info {
+            padding-bottom: 40px !important;
             padding-right: 25px !important;
             padding-left: 25px !important;
+        }
+        .sub-head {
+            font-size: 14px !important;
         }
         .buds-pro__handsfree {
             display: table-header-group !important;    
@@ -107,11 +111,18 @@
             margin-bottom: 15px;
         }
         .content-row {
+            padding-bottom: 40px !important;
             padding-right: 25px !important;
             padding-left: 25px !important;
         }
         .content-row__info {
             text-align: center;
+        }
+        .content-row__info h4{
+            font-size: 20px !important;
+        }
+        .content-row__info p{
+            font-size: 14px !important;
         }
         .image img {
             max-width: 600px !important;
@@ -194,7 +205,7 @@
                                                 <img src="img/Hero-Pixel-Pro.png" alt="Image of Buds Pro" style="display: block;width: 100%; max-width: 600px; height: auto;" width="600">
                                             </td>
                                         </tr>
-                                    </td>
+                                    </td>                                        
                                 </tr>
                             </table>
                         </td>
