--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         .hero-content {
             padding: 0 15px 0 15px !important;
         }
+        .hero-image {
+            max-width: 100% !important;
+        }
         .tune-in-table.left{
             height: auto !important;
             width: 100% !important;
@@ -222,7 +225,7 @@
                                         <!-- /Spacer -->
                                         <tr>
                                             <td align="center" style="padding: 0; width: 100%; font-size: 0;">
-                                                <img src="img/Hero-Pixel-Pro.png" alt="Image of Buds Pro" style="display: block;width: 100%; max-width: 600px; height: auto;" width="600">
+                                                <img src="img/Hero-Pixel-Pro_Large.png" class="hero-image" alt="Image of Buds Pro" style="display: block;width: 100%; max-width: 320px; height: auto;" width="600">
                                             </td>
                                         </tr>
                                     </td>                                        
