--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             max-width: 100% !important;
         }
         .tune-in-table.left{
+            min-height: auto !important;
             height: auto !important;
             width: 100% !important;
         }
@@ -247,7 +248,7 @@
                                 <!-- Start of Content First Row -->
                                 <tr>
                                     <td align="center" style="padding: 0;" valign="top">
-                                        <table class="tune-in-table" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
+                                        <table class="tune-in-table-container" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
                                            <tr>
                                                 <td class="two-columns">
                                                     <table class="tune-in-table right top" role="presentation" width="50%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" align="right">
@@ -264,7 +265,7 @@
                                                         </tr>
                                                     </table>
 
-                                                    <table class="tune-in-table left bottom" role="presentation" width="50%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" align="left">
+                                                    <table class="tune-in-table left bottom" role="presentation" width="50%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; min-height: 267px;" align="left">
                                                         <tr>
                                                             <td class="tune-in-table__content bottom" valign="top">
                                                                 <table class="content" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
