Update tune-in row image to maximum 600px width in mobile

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
             width: 100% !important;
         }
         .content__image img {
-            max-width: 100% !important;
+            max-width: 600px !important;
+            width: 100% !important;
+            height: auto !important;  
         }
         .content__info {
             padding-bottom: 40px !important;
