Minor font size update

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             text-align: center;
         }
         .content-row__info h4{
-            font-size: 20px !important;
+            font-size: 21px !important;
         }
         .content-row__info p{
             font-size: 14px !important;
@@ -345,7 +345,7 @@
                                                                     <tr>
                                                                         <td align="center">
                                                                             <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
-                                                                                <span style="font-size: 14px; line-height: 10px;">
+                                                                                <span class="learn-more" style="font-size: 15px; line-height: 10px;">
                                                                                     Learn more >
                                                                                 </span>
                                                                             </a>
@@ -390,7 +390,7 @@
                                                                     <tr>
                                                                         <td align="center" style="padding: 0;">
                                                                             <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
-                                                                                <span style="font-size: 14px; line-height: 10px;">
+                                                                                <span class="learn-more" style="font-size: 15px; line-height: 10px;">
                                                                                     Learn more >
                                                                                 </span>
                                                                             </a>
